Fix issue 1: hide menu on mobile by default

--- a/nofrills.css
+++ b/nofrills.css
@@ -54,3 +54,9 @@ body {
   }
 }
 
+@media screen and (min-width: 600px) {
+  #nofrills-items {
+    display: flex !important;
+  }
+}
+
